Add comment on use of rem

--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ Tags: black, gray, dark, light, one-column, two-columns, right-sidebar, flexible
 /* Apply a natural box layout model to all elements - http://paulirish.com/2012/box-sizing-border-box-ftw/ */
 * { -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box; }
 
+/* Using rem font sizing (Root em’s) with fallback to px for ie8 and below - http://snook.ca/archives/html_and_css/font-size-with-rem */
 body { margin: 0; font-size: 16px; font-size: 1rem; line-height: 1.5; }
 
 ::-webkit-selection { background: #5784FE; color: #fff; text-shadow: none; }
