Updated .row style and consolidated html to remove extra container elements from templates
- Changed margin and removed padding on .row class and consolidated html to remove extra container elements from templates
- Removed unnecessary comments from style.css
- Updated margin, padding & font-size with matching rem values, where missing
- Updated readme.txt with Getting Started information
- Initial Repository Release

--- a/css/12cols.css
+++ b/css/12cols.css
@@ -1,4 +1,6 @@
-/*  GRID COLUMN SETUP   ============================================================================= */
+/* ==========================================================================
+   Grid Column Setup
+   ========================================================================== */
 
 .col {
 	display: block;
@@ -10,12 +12,13 @@
 
 .row {
 	clear: both;
-	padding: 0;
-	margin: 0;
+	margin: 0 auto;
 }
 
 
-/*  GRID OF TWELVE   ============================================================================= */
+/* ==========================================================================
+   Grid Of Twelve
+   ========================================================================== */
 
 .span_12_of_12 { width: 100%; }
 
@@ -47,7 +50,6 @@
    ========================================================================== */
 
 /*  Breakpoints are set based on the design, not based on device sizes */
-
 @media only screen and (max-width: 1100px) {
 	.banner h1 {
 		font-size: 44px;
@@ -109,7 +111,6 @@
 }
 
 /*  Go full Width at less than 650px */
-
 @media only screen and (max-width: 650px) {
 	.span_12_of_12 {
 		width: 100%; 
