--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 /*
 Theme Name: Quark
-Theme URI: http://quarktheme.com/
+Theme URI: http://maddisondesigns.com/
 Author: Anthony Hortin
 Author URI: http://maddisondesigns.com/
 Description: A WordPress starter theme based on Responsive Grid System, HTML5 Boilerplate & Automattic's _S theme. It's your basic building block for creating beautiful, responsive custom themes built on HTML5 &amp; CSS3
