--- a/editor-style.css
+++ b/editor-style.css
@@ -4,13 +4,14 @@ Description: Used to style the TinyMCE editor.
 */
 
 /* ==========================================================================
-   IcoMoon icon webfont by Keyamoon - http://keyamoon.com/icomoon
+   Font Awesome icon font. http://gregoryloucas.github.com/Font-Awesome-More
    ========================================================================== */
 
-@import "css/icomoon.css";
+@import "css/font-awesome.min.css";
+
 
 /* ==========================================================================
-   Web fonts - Provided by Font Squirrel http://www.fontsquirrel.com
+   Web fonts - Google webfonts http://www.google.com/webfonts
    ========================================================================== */
 
 @font-face {
@@ -58,15 +59,16 @@ Description: Used to style the TinyMCE editor.
 }
 
 @font-face {
-	font-family: 'museo_500regular';
-	src: url('fonts/museo500-regular-webfont.eot');
-	src: url('fonts/museo500-regular-webfont.eot?#iefix') format('embedded-opentype'),
-		  url('fonts/museo500-regular-webfont.woff') format('woff'),
-		  url('fonts/museo500-regular-webfont.ttf') format('truetype'),
-		  url('fonts/museo500-regular-webfont.svg#museo_500regular') format('svg');
+	font-family: 'ArvoRegular';
+	src: url('fonts/Arvo-Regular-webfont.eot');
+	src: url('fonts/Arvo-Regular-webfont.eot?#iefix') format('embedded-opentype'),
+		  url('fonts/Arvo-Regular-webfont.woff') format('woff'),
+		  url('fonts/Arvo-Regular-webfont.ttf') format('truetype'),
+		  url('fonts/Arvo-Regular-webfont.svg#ArvoRegular') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
+
 
 
 /* ==========================================================================
@@ -96,36 +98,35 @@ body {
    ========================================================================== */
 
 h1, h2, h3, h4, h5, h6 {
-	font-family: 'museo_500regular', Georgia, "Times New Roman", Times, serif;
+	font-family: 'ArvoRegular', Georgia, "Times New Roman", Times, serif;
 	font-weight: normal;
 	font-style: normal;
-	line-height: 1.25;
-	margin: 0 0 8px 0;
-	margin: 0 0 0.5rem 0;
+	color: #333;
+	margin-top: 0;
 }
 
 h1 { 
 	margin-bottom: 10px;
 	margin-bottom: 0.625rem;
 	font-size: 48px;
-	font-size: 3rem; /* 48px / 16 */
-	line-height: 1.25; /* 60px / 48px */
+	font-size: 3rem;
+	line-height: 1.25;
 }
 
 h2 { 
 	margin-bottom: 8px;
 	margin-bottom: .5rem;
 	font-size: 36px;
-	font-size: 2.25rem; /* 36px / 16 */
-	line-height: 1.1666; /* 42px / 36px */
+	font-size: 2.25rem;
+	line-height: 1.1666;
 }
 
 h3 { 
 	margin-bottom: 6px;
 	margin-bottom: 0.375rem;
 	font-size: 28px;
-	font-size: 1.75rem; /* 28px / 16 */
-	line-height: 1.2857; /* 36px / 28px */
+	font-size: 1.75rem;
+	line-height: 1.2857;
 }
 
 
@@ -133,24 +134,24 @@ h4 {
 	margin-bottom: 5px;
 	margin-bottom: 0.3125rem;
 	font-size: 24px;
-	font-size: 1.5rem; /* 24px / 16  */
-	line-height: 1.25; /* 30px / 24px */
+	font-size: 1.5rem;
+	line-height: 1.25;
 }
 
 h5 { 
 	margin-bottom: 5px;
 	margin-bottom: 0.3125rem;
 	font-size: 16px;
-	font-size: 1rem; /* 16px / 16 */
-	line-height: 1.25; /* 20px / 16px */
+	font-size: 1rem;
+	line-height: 1.25;
 }
 
 h6 { 
 	margin-bottom: 5px;
 	margin-bottom: 0.3125rem;
 	font-size: 14px;
-	font-size: .875rem; /* 14px / 16 */
-	line-height: 1.2142; /* 17px / 14px */
+	font-size: .875rem;
+	line-height: 1.2142;
 }
 
 hr {
@@ -257,7 +258,7 @@ big {
 pre {
 	border-radius: 3px;
 	color: #555;
-	font-family: Monaco,Menlo,Consolas,"Courier New",monospace;
+	font-family: Monaco, Menlo, Consolas, "Courier New", monospace;
 	font-size: 12px;
 	font-size: 0.75rem; /* 12px / 16px */
 	padding: 0 3px 2px;
