Make sure blockquote.pull-right doesn't get floated so it remains a block element
The CSS for the Font Awesome icons uses this class as well and sets it to float:right. This means that my right aligned blockquotes weren't displaying as a full-width block element. Specifically setting this will resolve the issue

--- a/style.css
+++ b/style.css
@@ -337,6 +337,7 @@ blockquote.pull-right {
 	margin: 0 1.25rem 1.125rem 0;
 	padding: 0 16px 0 0;
 	padding: 0 1rem 0 0;
+	float: none;
 }
 
 blockquote p {
